Fix Z-index issue
Previous change made the tooltips display above the header/navbar

--- a/Wuikinuxv Learning App/src/MainRouter.css
+++ b/Wuikinuxv Learning App/src/MainRouter.css
@@ -4,7 +4,7 @@ header{
   left: 0;
   width: 100%;
   background-color: #950000; 
-  z-index: 1;
+  z-index: 2;
 }
 header nav{
   display: flex;
